--- a/app/walkandplay/trunk/client/phone/build.properties
+++ b/app/walkandplay/trunk/client/phone/build.properties
@@ -8,7 +8,7 @@ project.name=wp
 midlet.name=WP
 midlet.class=org.walkandplay.client.phone.WP
 midlet.icon=/app.png
-midlet.version=1.9
+midlet.version=1.11
 midlet.vendor=7Scenes
 midlet.info.url=http://www.7scenes.com
 midlet.cldc=CLDC-1.0
@@ -27,12 +27,12 @@ kw-port=6050
 kw-app=geoapp
 kw-role=user
 volume=70
-demo=true
-external-player=false
+demo=false
+external-player=true
 audio-rate=8000
 audio-bits=8
 gps-sample-interval=3000
-gps-send-interval=5000
+gps-send-interval=8000
 gps-min-sats=4
 gps-min-hdop=2
 device-screen-width=240
