wnp: some refactoring

--- a/app/walkandplay/trunk/client/phone/build.testserver.properties
+++ b/app/walkandplay/trunk/client/phone/build.testserver.properties
@@ -1,4 +1,4 @@
 kw-url=http://test.walkandplay.com/wp
-geodan-wms-url=http://walkandplay.com/map
+geodan-wms-url=http://walkandplay.com/map/
 google-wms-url=http://test.walkandplay.com/wp/map.srv
 kw-server=test.walkandplay.com
