wp: phone demo mode withnmea data

--- a/app/walkandplay/trunk/client/phone/build.properties
+++ b/app/walkandplay/trunk/client/phone/build.properties
@@ -23,6 +23,7 @@ kw-app=geoapp
 kw-role=user
 volume=70
 demo=true
+demo-nmea-url=http://test.walkandplay.com/zwijger.nmea
 external-player=true
 audio-rate=8000
 audio-bits=8
