--- a/app/walkandplay/trunk/client/phone/build.properties
+++ b/app/walkandplay/trunk/client/phone/build.properties
@@ -22,7 +22,7 @@ kw-port=6050
 kw-app=geoapp
 kw-role=user
 volume=70
-demo=true
+demo=false
 demo-nmea-url=http://test.walkandplay.com/zwijger.nmea
 external-player=true
 audio-rate=8000
