wnp: connect buggie

--- a/app/walkandplay/trunk/client/phone/build.properties
+++ b/app/walkandplay/trunk/client/phone/build.properties
@@ -16,8 +16,8 @@ midlet.midp=MIDP-2.0
 midlet.permissions=javax.microedition.io.Connector.http
 midlet.permissions.opt=javax.microedition.io.Connector.bluetooth.client,javax.microedition.media.control.VideoControl.getSnapshot
 kw-timeout=20
-kw-user=yellow2
-kw-password=user
+kw-user=team1
+kw-password=wnpss
 kw-port=6050
 kw-app=geoapp
 kw-role=user
