diwi: update voor CMS

--- a/app/diwi/trunk/server/runtime.local.properties
+++ b/app/diwi/trunk/server/runtime.local.properties
@@ -22,7 +22,10 @@ tcpconnector.port=5515
 siteurl.name=http://local.diwi.nl
 webappurl.name=http://local.diwi.nl/diwi
 
+# kichservleturl.name=http://137.224.112.237/diwirouting/POIServlet
+# routingservleturl.name=http://137.224.112.237/diwirouting/RoutingServlet
+# mediaurl.name=
+
 kichservleturl.name=http://137.224.112.237/diwirouting/POIServlet
 routingservleturl.name=http://137.224.112.237/diwirouting/RoutingServlet
-mediaurl.name=
-
+mediaurl.name=http://simlandscape.alterra.nl/diwimedia
