--- a/app/diwi/trunk/server/runtime.test.properties
+++ b/app/diwi/trunk/server/runtime.test.properties
@@ -22,6 +22,10 @@ tcpconnector.port=5516
 siteurl.name=http://test.digitalewichelroede.nl
 webappurl.name=http://test.digitalewichelroede.nl/diwi
 
-kichservleturl.name=http://diwi.alterra.nl/diwirouting/POIServlet
-routingservleturl.name=http://diwi.alterra.nl/diwirouting/RoutingServlet
-mediaurl.name=
+# kichservleturl.name=http://diwi.alterra.nl/diwirouting/POIServlet
+# routingservleturl.name=http://diwi.alterra.nl/diwirouting/RoutingServlet
+# mediaurl.name=
+
+kichservleturl.name=http://137.224.112.237/diwirouting/POIServlet
+routingservleturl.name=http://137.224.112.237/diwirouting/RoutingServlet
+mediaurl.name=http://simlandscape.alterra.nl/diwimedia
