--- a/app/diwi/trunk/server/test/protocol/test.properties
+++ b/app/diwi/trunk/server/test/protocol/test.properties
@@ -1,10 +1,9 @@
 # properties for protocol test  client
 #host=berlin
-host=berlin
-#host=localhost
+host=localhost
 
 # must match port in portal.xml for local test
-port=5516
+port=5515
 script.dir=script
 result.dir=/var/keyworx/webapps/diwi/rsc/test
 #result.dir=/var/keyworx/webapps/diwi/rsc/test
