added tapmode; login and -feedback impr. clean up of files.

--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -230,6 +230,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\home.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\dwConfig.txt" />
+  </ItemGroup>
   <Import Condition="'$(TargetFrameworkVersion)' == 'v1.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.v1.targets" />
   <Import Condition="'$(TargetFrameworkVersion)' == 'v2.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
