--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -18,7 +18,7 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<property file="build.properties"/>
 
     <!-- change this for different builds: local, test & live -->
-    <property name="runtime.properties" value="runtime.live.properties"/>
+    <property name="runtime.properties" value="runtime.test.properties"/>
 	<property file="${runtime.properties}"/>
 
 	<property name="security.properties" value="security.properties"/>
