--- a/app/diwi/trunk/server/test/protocol/test.properties
+++ b/app/diwi/trunk/server/test/protocol/test.properties
@@ -3,6 +3,9 @@ host=berlin
 #host=localhost
 
 # must match port in portal.xml for local test
+# www.digitalewichelroede.nl
+# port=5515
+# test.digitalewichelroede.nl
 port=5516
 script.dir=script
 result.dir=/var/keyworx/webapps/diwi/rsc/test
