--- a/app/diwi/trunk/server/runtime.live.properties
+++ b/app/diwi/trunk/server/runtime.live.properties
@@ -24,5 +24,5 @@ webappurl.name=http://www.digitalewichelroede.nl/diwi
 
 kichservleturl.name=http://137.224.112.237/diwirouting/POIServlet
 routingservleturl.name=http://137.224.112.237/diwirouting/RoutingServlet
-mediaurl.name=http://simlandscape.alterra.nl/diwimedia
+mediaurl.name=http://simlandscape.alterra.nl/diwimedia/
 
