--- a/app/diwi/trunk/server/runtime.test.properties
+++ b/app/diwi/trunk/server/runtime.test.properties
@@ -28,4 +28,4 @@ webappurl.name=http://test.digitalewichelroede.nl/diwi
 
 kichservleturl.name=http://137.224.112.237/diwirouting/POIServlet
 routingservleturl.name=http://137.224.112.237/diwirouting/RoutingServlet
-mediaurl.name=http://simlandscape.alterra.nl/diwimedia
+mediaurl.name=http://simlandscape.alterra.nl/diwimedia/
