fixed dnl bug...

--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -23,7 +23,8 @@
     <NativePlatformName>Windows Mobile 5.0 Smartphone SDK</NativePlatformName>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <ApplicationIcon>appIcon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -233,7 +234,6 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\appIcon.ico" />
-    <Content Include="appIcon.ico" />
     <Content Include="Resources\dwConfig.txt" />
   </ItemGroup>
   <Import Condition="'$(TargetFrameworkVersion)' == 'v1.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.v1.targets" />
