diwi: domplein update

--- a/app/diwi/trunk/server/map/build.xml
+++ b/app/diwi/trunk/server/map/build.xml
@@ -11,7 +11,7 @@ $Id$
 	<property file="../../build.properties"/>
 
 	<property name="build.dir" value="${basedir}/../build/map" />
-    <property name="runtime.properties" value="../runtime.test.properties" />
+    <property name="runtime.properties" value="../runtime.live.properties" />
     <property file="${runtime.properties}" />
 
 	<target name="processvars">
