--- a/app/diwi/trunk/server/build.xml
+++ b/app/diwi/trunk/server/build.xml
@@ -14,11 +14,11 @@ $Id: build.xml 353 2007-02-02 12:04:11Z just $
 	<property name="geotracing.server.dir" value="${geotracing.base.dir}/server"/>
 
 	<property file="../build.properties"/>
-	<property name="build.properties" value="../build.test.properties"/>
+	<property name="build.properties" value="../build.live.properties"/>
 	<property file="build.properties"/>
 
     <!-- change this for different builds: local, test & live -->
-    <property name="runtime.properties" value="runtime.test.properties"/>
+    <property name="runtime.properties" value="runtime.live.properties"/>
 	<property file="${runtime.properties}"/>
 
 	<property name="security.properties" value="security.properties"/>
