base: migration of DB content to 7scenes initial data - small fixes

--- a/base/trunk/server/build.properties
+++ b/base/trunk/server/build.properties
@@ -1,7 +1,7 @@
 # $Id: build.properties,v 1.31 2006-05-22 22:39:20 just Exp $
 
 # your PATH must point to the bin where the Jikes compiler is
-build.compiler=jikes
+# build.compiler=jikes
 javac.debug=true
 
 war.name=gt
