otter: settings for samoa 2

--- a/app/otter/trunk/build.properties
+++ b/app/otter/trunk/build.properties
@@ -10,7 +10,7 @@ gt.war.dir=${basedir}/../../../base/trunk/server/build/war
 
 # specify the directory for your (tomcat) webapps
 deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
-deploy.live.dir=/Volumes/homes/httpd/geotracing.com
+deploy.live.dir=/var/gworx/webapps/geotracing
 
 
 
