all: updates for move to new server

--- a/base/trunk/server/build.properties
+++ b/base/trunk/server/build.properties
@@ -6,7 +6,7 @@ javac.debug=true
 
 war.name=gt
 deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
-deploy.live.dir=/Volumes/homes/httpd/geotracing.com
+deploy.live.dir=gworx@samoa:/var/gworx/webapps/geotracing
 
 
 
